--- a/src/App.css
+++ b/src/App.css
@@ -13,10 +13,28 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(50px + 6vmin);
   color: white;
 }
 
-.App-link {
-  color: #09d3ac;
+.App-quote {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-size: calc(10px + 2vmin);
+  font-family: 'Franklin Gothic Medium';
+  color: white;
+  width: 100%;
+  background-color: red;
+}
+
+.App-button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(6px + 2vmin);
+  color: white;
 }
