--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
   justify-content: center;
   font-size: calc(50px + 6vmin);
   color: white;
