--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@
   justify-content: center;
   font-size: calc(50px + 6vmin);
   color: white;
+  transition: background-color 2s linear;
 }
 
 .App-quote {
@@ -25,7 +26,7 @@
   justify-content: center;
   text-align: center;
   font-size: calc(10px + 2vmin);
-  font-family: 'Franklin Gothic Medium';
+  font-family: 'Arial Black';
   color: white;
   width: 100%;
   background-color: red;
@@ -38,4 +39,11 @@
   justify-content: center;
   font-size: calc(6px + 2vmin);
   color: white;
+}
+
+.App-colorPicker {
+  width: 200px; 
+  display: flex;
+  align-items: center;
+  font-size: 14px;
 }
